--- a/intl.zh-CN/实例/创建实例/使用向导创建实例.md
+++ b/intl.zh-CN/实例/创建实例/使用向导创建实例.md
@@ -1,175 +1,293 @@
+---
+keyword: [ECS实例, 管理控制台, 向导]
+---
+
 # 使用向导创建实例
 
-本章节介绍如何使用ECS管理控制台向导创建ECS实例。创建ECS实例时，您需要配置实例规格、镜像、存储、网络、安全组等必备信息。向导也提供了丰富的扩展配置功能，满足您的个性化部署和管理需求。
+ECS管理控制台提供了ECS实例创建向导，向导中列出了创建ECS实例时所有可配置的信息，引导您逐步完成创建一台ECS实例。
 
-完成创建ECS实例的准备工作：
+## 准备工作
 
-1.  创建账号，以及完善账号信息。
+1.  注册阿里云账号，并完善账号信息。
+
     -   [注册阿里云账号](https://www.alibabacloud.com/help/doc-detail/50482.htm)。
     -   [绑定信用卡或PayPal账号](https://www.alibabacloud.com/help/doc-detail/50517.htm)。
-    -   如果您需要购买中国内地地域的ECS实例，必须完成实名认证。更多详情，请参见[实名认证](https://www.alibabacloud.com/help/doc-detail/52595.htm)。
-2.  阿里云提供一个默认的专有网络VPC，如果您不想使用默认专有网络VPC，可以在目标地域创建一个专有网络和交换机。具体操作，请参见[搭建IPv4专有网络](/intl.zh-CN/快速入门/搭建IPv4专有网络.md)。
-3.  阿里云提供一个默认的安全组，如果您不想使用默认安全组，可以在目标地域创建一个安全组。具体操作，请参见[创建安全组](/intl.zh-CN/安全/安全组/创建安全组.md)。
+    -   如果您需要购买中国内地地域的ECS实例，必须完成实名认证。具体操作，请参见[实名认证](https://www.alibabacloud.com/help/doc-detail/52595.htm)。
+2.  前往[实例创建页](https://ecs-buy.aliyun.com/wizard/#/)。
 
-如果您需要使用其它扩展功能，也需要完成相应的准备工作，例如：
 
--   如果创建Linux实例时要绑定SSH密钥对，需要在目标地域创建一个SSH密钥对。具体操作，请参见[创建SSH密钥对](/intl.zh-CN/安全/SSH密钥对/使用SSH密钥对/创建SSH密钥对.md)。
--   如果要设置自定义数据，需要准备实例自定义数据。具体操作，请参见[ECS实例自定义数据概述](/intl.zh-CN/实例/管理实例/使用实例自定义数据/ECS实例自定义数据概述.md)。
--   如果要为ECS实例关联某个角色，需要创建、授权实例RAM角色，并将其授予ECS实例。具体操作，请参见[授予实例RAM角色](/intl.zh-CN/安全/实例RAM角色/授予实例RAM角色.md)。
+## 步骤1：完成基础配置
 
-1.  前往[实例创建页](https://ecs-buy.aliyun.com/wizard/#/)。
+基础配置包括购买实例的基础需求（付费模式、地域可用区）以及一台实例所需的基础资源（实例规格、镜像、存储）。完成基础设置后，单击**下一步：网络和安全组设置**。
 
-2.  完成基础配置。
+1.  选择付费模式。
 
-    1.  选择**付费模式**：**包年包月**、**按量付费**或者[抢占式实例](/intl.zh-CN/实例/选择实例购买方式/抢占式实例/抢占式实例概述.md)。
+    付费模式影响实例的计费和收费规则，不同付费模式的实例遵循的资源状态变化规则也存在差异。
 
-        **说明：** 抢占式实例的创建方式，请参见[创建抢占式实例](/intl.zh-CN/实例/选择实例购买方式/抢占式实例/创建抢占式实例.md)。
+    |付费模式|说明|相关文档|
+    |----|--|----|
+    |**包年包月**|先付费后使用。|[包年包月](/intl.zh-CN/产品计费/计费方式/包年包月.md)|
+    |**按量付费**|先使用后付费，计费周期精确到秒，方便您按需购买和释放资源。**说明：** 推荐搭配使用节省计划、预留实例券优化成本。
 
-    2.  选择地域和可用区。
+|    -   [按量付费](/intl.zh-CN/产品计费/计费方式/按量付费.md)
+    -   [节省计划](/intl.zh-CN/产品计费/计费方式/节省计划.md)
+    -   [预留实例券](/intl.zh-CN/产品计费/计费方式/预留实例券.md) |
+    |**抢占式实例**|先使用后付费，相对于按量付费实例价格有一定的折扣，但可能因市场价格变化或实例规格库存不足而自动释放实例。|[抢占式实例](/intl.zh-CN/产品计费/计费方式/抢占式实例.md)|
 
-        系统默认随机分配可用区，您可以选择适用的可用区。地域和可用区的说明，请参见[地域和可用区](https://www.alibabacloud.com/help/doc-detail/40654.htm)。
+2.  选择地域及可用区。
 
-        **说明：** 实例创建完成后，不可更改地域和可用区。
+    选择距离近的地域可以降低网络时延，实例创建完成后不支持更改地域和可用区。更多信息，请参见[地域和可用区]()。
 
-    3.  选择实例规格并设置实例数量。
+3.  选择实例规格并进行相关配置。
 
-        可供选择的实例规格由您所选择的地域决定，您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例的可购情况。不同实例规格适用的应用场景，请参见[实例规格族](/intl.zh-CN/实例/实例规格族.md)。
+    1.  选择实例规格。
 
-        **说明：**
+        可选的实例规格和地域等因素有关，您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)查看实例的可购情况。
 
-        -   每个账号有限定的按量付费实例或抢占式实例配额。以页面上显示的信息为准。
-        -   如果您使用弹性网卡，企业级实例规格族必须选择不少于2 vCPU核的实例规格，入门级实例规格族必须选择不少于4 vCPU核的实例规格。各种实例规格支持的弹性网卡数量，请参见[实例规格族](/intl.zh-CN/实例/实例规格族.md)。
-        -   如果您要使用SSD云盘作为存储设备，请选择I/O优化实例。
-    4.  选择镜像。您可以选择公共镜像、自定义镜像、共享镜像或从镜像市场选择镜像。
+        如果您有特定的配置需求，例如需要挂载多张弹性网卡、使用ESSD云盘、使用本地盘等，请确认实例规格是否支持。关于实例规格的特点、适用场景、指标数据等信息，请参见[实例规格族](/intl.zh-CN/实例/实例规格族.md)。
 
-        **说明：**
+        如果您针对特定场景购买实例，可以查看**场景化选型**页签中的推荐信息，例如适用于Web开发与测试、大数据集群或AI机器学习等场景的实例规格。
 
-        -   如果您要使用SSH密钥对，必须选择Linux系统。
-        -   如果您要设置实例自定义数据，只能选择特定的镜像，详细信息请参见[ECS实例自定义数据概述](/intl.zh-CN/实例/管理实例/使用实例自定义数据/ECS实例自定义数据概述.md)。
-        -   如果您要使用公共镜像中的Red Hat镜像，需注意实例规格族是否已支持，详情请参见[RHEL（Red Hat Enterprise Linux）镜像支持哪些实例规格族？](/intl.zh-CN/镜像/镜像FAQ.md)。
-        -   公共镜像仅包括初始系统环境，更多镜像可以在镜像市场获取。
-    5.  选择存储。
+    2.  如果选择**付费模式**为**抢占式实例**，配置使用时长和上限价格。
 
-        -   **系统盘**：必选项，用于安装操作系统。指定系统盘的云盘类型和容量：
-            -   云盘类型：地域以及实例规格的不同会影响可供选择的云盘类型。
-            -   容量：系统盘默认容量为40 GiB。如果选择的镜像文件大于40 GiB，则默认为镜像文件大小。系统盘最低容量与镜像有关，实际情况以购买页显示为准。
+        使用时长指抢占式实例的保护期，超出保护期后可能因市场价格变化或实例规格库存不足而自动释放实例。使用时长选项说明如下表所示。
 
-                |镜像|系统盘容量范围（GiB）|
-                |:-|:-----------|
-                |Linux（不包括CoreOS和Red Hat）|\[max\{20, 镜像文件大小\}, 500\]|
-                |FreeBSD|\[max\{30, 镜像文件大小\}, 500\]|
-                |CoreOS|\[max\{30, 镜像文件大小\}, 500\]|
-                |Red Hat|\[max\{40, 镜像文件大小\}, 500\]|
-                |Windows|\[max\{40, 镜像文件大小\}, 500\]|
+        |抢占式实例使用时长|说明|
+        |---------|--|
+        |**设定使用实例1小时**|抢占式实例创建后有1小时保护期，在保护期内不会被自动释放。|
+        |**无确定使用时长**|抢占式实例创建后没有保护期，但比有保护期的抢占式实例更优惠。|
 
-        -   **数据盘**：可选项。如果在此时创建云盘作为数据盘，必须选择云盘类型、容量、数量，并设置是否[加密](/intl.zh-CN/块存储/加密云盘/加密概述.md)。您可以创建空云盘，也可以使用快照创建云盘。
+        上限价格选项说明如下表所示。
 
-            **说明：** 此时创建的云盘有以下特点：
+        |单台实例规格上限价|说明|
+        |---------|--|
+        |**使用自动出价**|始终使用实例规格的实时市场价格，该市场价格不会超过对应按量付费实例的价格。使用自动出价可以避免抢占式实例因实时市场价格超过上限被自动释放，但不能避免因实例规格的库存不足被自动释放。|
+        |**设置单台上限价**|自行输入明确的价格上限，实例规格的实时市场价格超出该上限或者库存不足时，抢占式实例都会被自动释放。|
 
-            -   付费模式与实例相同。
-            -   包年包月数据盘只能随实例一起释放，按量付费的数据盘可以设置为随实例一起释放。
-            -   关于数据盘挂载数量的限制，请参见[块存储使用限制](/intl.zh-CN/产品简介/使用限制.md)。
-        -   **共享盘NAS**：可选项。您可以选择已经创建的文件系统进行挂载，最多可以挂载5个文件系统。相关配置请参见[新购ECS时挂载NAS文件系统]()。
-        -   如果您选择的是带本地盘的实例规格族（例如i1、d1、d1ne等），这里会显示实例规格对应的本地盘信息，不可配置。各种本地盘实例规格对应的本地盘信息，请参见[实例规格族](/intl.zh-CN/实例/实例规格族.md)。
-    6.  配置快照服务。选择自动快照策略，并设置要备份的数据源（所有云盘、仅系统盘或仅数据盘）。
+    3.  配置购买实例的数量。
 
-        **说明：** 快照服务用于定时对云盘数据进行备份，可应对病毒感染、数据误删等风险。本次操作设置的数据源仅针对此次创建的云盘进行保护，如果想要备份后续新创建的云盘，您需要单独应用快照策略。
+        使用向导单次最多购买100台实例。此外，您持有的实例数量不能超过配额，具体配额以页面显示为准。更多信息，请参见[查看和提升实例配额](/intl.zh-CN/标签与资源/资源/权益配额/查看和提升实例配额.md)。
 
-3.  单击**下一步：网络和安全组**，完成网络和安全组设置。
+4.  选择镜像。
 
-    1.  选择网络类型。
+    镜像提供了运行实例所需的信息，阿里云提供多种镜像来源供您方便地获取镜像，如下表所示。
 
-        -   **专有网络**：必须选择专有网络和交换机。如果您没有创建专有网络和交换机，可以选择默认专有网络和默认交换机。
+    |镜像来源|说明|相关文档|
+    |----|--|----|
+    |公共镜像|阿里云官方提供的基础镜像，均已获得正版授权，涵盖Windows Server系统镜像和主流的Linux系统镜像。|[公共镜像概述](/intl.zh-CN/镜像/公共镜像/公共镜像概述.md)|
+    |自定义镜像|您自行创建或导入的镜像，包含了初始系统环境、应用环境、软件配置等信息，可以节省重复配置的时间。|[自定义镜像概述](/intl.zh-CN/镜像/自定义镜像/自定义镜像概述.md)|
+    |共享镜像|其他阿里云账号共享的自定义镜像，方便跨账号使用同一镜像创建实例。|[共享或取消共享镜像](/intl.zh-CN/镜像/自定义镜像/共享或取消共享镜像.md)|
+    |镜像市场|镜像市场中的镜像均经过严格审核，种类丰富，方便您一键部署用于建站、应用开发等场景的云服务器。|[镜像市场](/intl.zh-CN/镜像/镜像市场.md)|
 
-            **说明：** 部分实例规格族不支持VPC高阶特性，具体实例规格族列表请参见[不支持VPC高阶特性的实例规格族](/intl.zh-CN/实例/选择实例规格/不支持VPC高阶特性的实例规格族.md)。如果您选择的实例规格在不支持VPC高阶特性的实例规格族中，而VPC又启用了高阶特性，那么您将不能选择此VPC（VPC状态为灰色）。您可以移动鼠标到灰色的VPC上查看页面提示，并根据页面提示重新选择支持VPC高阶特性的实例规格。
+5.  选择存储并进行相关配置。
 
-        -   **经典网络**：如果您是在2016年6月16日12:00（UTC+8）以后第一次购买ECS实例，不能再选择经典网络。
-    2.  设置公网带宽。
+    实例通过添加系统盘、数据盘和共享盘NAS获得存储能力，云服务器ECS提供了云盘和本地盘满足不同场景的需求。
 
-        -   如果需要为实例分配一个公网IP地址，必须选中**分配公网IPv4地址**，选择**按使用流量**或**按固定带宽**计费公网带宽，并指定带宽值。通过这种方式分配的公网IP地址不能与实例解绑。关于如何选择公网带宽计费模式，请参见[公网带宽计费模式](/intl.zh-CN/产品计费/计费项/公网带宽计费.md) 。
-        -   如果您的实例不需要访问公网，或者您的VPC类型ECS实例使用弹性公网IP（EIP）地址访问公网，您不需要分配公网IP地址。EIP地址随时能与实例绑定或解绑。
-    3.  选择安全组。
+    云盘可以用作系统盘和数据盘，包括ESSD云盘、SSD云盘、高效云盘等类型。更多信息，请参见[云盘概述](/intl.zh-CN/块存储/块存储介绍/云盘概述.md)。
 
-        如果您自己没有创建安全组，可以使用默认安全组。默认安全组的规则，请参见[安全组概述](/intl.zh-CN/安全/安全组/安全组概述.md)。
+    **说明：** 随实例一起创建的云盘和实例的付费模式相同。
 
-    4.  添加弹性网卡。
+    本地盘只能用作数据盘，如果实例规格配备了本地盘（例如本地SSD型、大数据型等），页面中会显示本地盘的信息。更多信息，请参见[本地盘](/intl.zh-CN/块存储/块存储介绍/本地盘.md)。
 
-        如果所选实例规格支持弹性网卡，可以添加弹性网卡，并为网卡选择交换机。
+    **说明：** 不支持自行为实例挂载本地盘。
 
-        **说明：** 这里添加的弹性网卡默认会随实例一起释放，您可以[在ECS控制台](/intl.zh-CN/网络/弹性网卡/解绑弹性网卡.md)或者使用[DetachNetworkInterface](/intl.zh-CN/API参考/弹性网卡/DetachNetworkInterface.md)接口分离实例和网卡。
+    1.  选择系统盘。
 
-4.  单击**下一步：系统配置**，完成系统配置项。
+        系统盘用于安装操作系统，默认容量为40 GiB，但实际可设置的最低容量和镜像类型有关，如下表所示。
 
-    1.  选择并设置登录凭证。
+        |镜像|系统盘容量范围（GiB）|
+        |:-|:-----------|
+        |Linux（不包括CoreOS和Red Hat）|\[max\{20, 镜像文件大小\}, 500\]|
+        |FreeBSD|\[max\{30, 镜像文件大小\}, 500\]|
+        |CoreOS|\[max\{30, 镜像文件大小\}, 500\]|
+        |Red Hat|\[max\{40, 镜像文件大小\}, 500\]|
+        |Windows|\[max\{40, 镜像文件大小\}, 500\]|
 
-        根据镜像选择不同的登录凭证：
+    2.  选择数据盘。
 
-        -   Linux系统：可以选择使用密钥对或密码作为登录凭证。
-        -   Windows系统：只能使用密码作为登录凭证。
-        您也可以在创建实例后再设置登录凭证，具体步骤请参见[重置实例登录密码](/intl.zh-CN/实例/管理实例/重置实例登录密码.md)。
+        支持创建空云盘或者用快照创建云盘。快照是云盘在某一时间点数据状态的备份文件，用快照创建云盘便于快速导入数据。选择数据盘时，您还可以加密云盘满足数据安全或法规合规等场景的要求。关于数据加密的介绍，请参见[加密概述](/intl.zh-CN/块存储/加密云盘/加密概述.md)。
 
-    2.  设置实例名称以及显示在操作系统内部的计算机名。
+        **说明：** 单台实例支持挂载的数据盘存在数量限制。更多信息，请参见[块存储使用限制](/intl.zh-CN/产品简介/使用限制.md)。
 
-        如果您创建了多台实例，批量设置有序名称可以帮助您更好地管理实例。更多详情，请参见[批量设置有序的实例名称或主机名称](/intl.zh-CN/最佳实践/批量设置有序的实例名称或主机名称.md)。
+    3.  选择共享盘NAS。
 
-    3.  设置高级选项。
+        如果您有较多数据需要供多台实例共享访问，推荐使用NAS文件系统，可以节约大量拷贝与同步成本。
 
-        -   实例RAM角色：为实例授予一个RAM角色。
-        -   实例自定义数据：自定义实例启动行为或向实例传入数据。
-5.  单击**下一步：分组设置**，完成实例分组管理。
+        选择已有的NAS文件系统，或者单击**创建文件系统**前往NAS文件系统控制台即时创建NAS文件系统。具体操作，请参见[通过控制台创建通用型NAS文件系统]()。创建完成后，返回ECS实例创建向导并单击![refresh](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0575702261/p278001.png)按钮，查看最新的NAS文件系统列表。关于挂载NAS文件系统时的注意事项，请参见[新购ECS时挂载NAS文件系统]()。
 
-    1.  添加标签。
+6.  配置快照服务。
 
-        持有多台实例时，使用标签功能管理实例更加方便。更多详情，请参见[标签概述](/intl.zh-CN/标签与资源/标签/标签概述.md)。
+    创建实例时即可为云盘开启自动备份，有效应对数据误删等风险。
 
-    2.  选择资源组。
+    选择已有的自动快照策略，或者单击**创建自动快照策略**前往快照页面即时创建自动快照策略。具体操作，请参见[创建自动快照策略](/intl.zh-CN/快照/使用自动快照策略/创建自动快照策略.md)。创建完成后，返回ECS实例创建向导并单击![refresh](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0575702261/p278001.png)按钮，查看最新的自动快照策略列表。
 
-        资源组功能面向企业用户，可以实现企业内部多用户、多项目的资源分级管理。更多详情，请参见[资源组](/intl.zh-CN/标签与资源/资源/资源组.md)。
 
-    3.  选择部署集。
+## 步骤2：完成网络和安全组配置
 
-        部署集是实例分布的控制策略，可以将部署集内的实例分散部署在不同的物理服务器上，保证业务的高可用性和底层容灾能力。更多详情，请参见[创建部署集](/intl.zh-CN/部署与弹性/部署集/创建部署集.md)。
+网络和安全组配置提供了公网以及与其他阿里云资源通信的能力，并保障实例在网络中的安全。完成网络和安全组配置后，单击**下一步：系统配置**。
 
-    4.  选择专有宿主机。
+1.  选择网络。
 
-        您可以选择**自动部署/AutoPlacement**或者指定一台专有宿主机。
+    推荐您使用专有网络，专有网络之间逻辑上彻底隔离，安全性更高，且支持弹性公网IP（EIP）、弹性网卡等功能。
 
-        专有宿主机功能可以让您独享一台云主机的物理资源，同时兼具灵活性和弹性。更多详情，请参见[专有宿主机功能特性](/intl.zh-CN/产品简介/功能特性/功能特性.md)。
+    |网络类型|说明|相关文档|
+    |----|--|----|
+    |**专有网络**|专有网络是您在阿里云自己定义的一个隔离网络环境，您可以完全掌控自己的专有网络，例如选择IP地址范围、配置路由表和网关等。如果在创建实例时不需要自定义专有网络配置，您可以跳过本步骤，系统会自动创建默认专有网络和交换机。
 
-6.  确认订单。
+选择已有的专有网络和交换机，或者单击**前往控制台创建**前往专有网络控制台即时创建专有网络和交换机。创建完成后，返回ECS实例创建向导并单击![refresh](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0575702261/p278001.png)按钮，查看最新的专有网络和交换机列表。
 
-    1.  在**所选配置**部分，确认配置信息。您可以单击编辑图标重新编辑配置。
+|    -   [什么是专有网络](/intl.zh-CN/产品简介/什么是专有网络.md)
+    -   [创建专有网络](/intl.zh-CN/专有网络和交换机/使用专有网络.md)
+    -   [创建交换机](/intl.zh-CN/专有网络和交换机/使用交换机.md) |
+    |**经典网络**|经典网络类型的实例统一部署在阿里云公共基础设施内，规划和管理由阿里云负责。**说明：** 如果您是在2016年6月16日12:00（UTC+8）以后第一次购买ECS实例，不能再选择经典网络。
 
-        -   （可选）单击**保存为启动模板**可以将此次选型配置记录成启动模板，方便后续引用。更多详情，请参见[实例启动模板](/intl.zh-CN/部署与弹性/管理实例启动模板/什么是实例启动模板.md)。
-        -   （可选）单击**生成Open API最佳实践脚本**可以获取创建实例时的API最佳实践列表。左侧**API 工作流**罗列出推荐的关联API以及请求参数取值。右侧提供面向编程语言的SDK示例，目前支持**Java**和**Python**示例。更多详情，请参见[ECS API简介](/intl.zh-CN/API参考/API简介.md)。
-        -   （可选）单击**保存当前购买配置为ROS模板**可以将此次选型配置记录成ROS模板，方便继续使用ROS模板创建资源栈。详细操作，请参见[创建资源栈](/intl.zh-CN/资源栈/创建资源栈.md)。
-    2.  如果付费模式为**按量付费**，可以**设置自动释放服务时间**。
+|[网络类型](/intl.zh-CN/网络/网络类型.md)|
 
-    3.  如果付费模式为**包年包月**，可以设置购买时长，并选择是否开启**自动续费**。
+2.  分配公网IP。
 
-    4.  确认配置费用。
+    如果实例需要进行公网通信，必须分配公网IP。您可以在创建实例时选择自动分配一个固定公网IP，或者在创建实例后自行配置，通过EIP、NAT网关等方式进行公网通信。EIP、NAT网关需要自行购买，更多信息，请参见[什么是弹性公网IP](/intl.zh-CN/.md)和[什么是NAT网关](/intl.zh-CN/产品简介/什么是NAT网关.md)。
 
-        实例付费模式和公网带宽计费模式决定了显示的费用信息，如下表所示。
+    1.  选中**分配公网IPv4地址**。
 
-        |实例付费模式|公网带宽计费模式|费用估算|
-        |:-----|:-------|:---|
-        |按量付费或抢占式实例|按使用流量|公网流量费用 + 配置费用。其中，配置费用包括：实例规格（CPU 和内存的配置）、系统盘、数据盘（如果有）和本地盘（如果有）的费用。|
-        |按固定带宽|配置费用，包括：实例规格（CPU和内存的配置）、系统盘、数据盘（如果有）、本地盘（如果有）和公网带宽的费用。|
-        |包年包月|按固定带宽|配置费用，包括：实例规格（CPU和内存的配置）、系统盘、数据盘（如果有）、本地盘（如果有）和公网带宽的费用。|
-        |按使用流量|公网流量费用 + 配置费用。其中，配置费用包括：实例规格（CPU和内存的配置）、系统盘、数据盘（如果有）和本地盘（如果有）的费用。|
+    2.  选择带宽计费模式。
 
-    5.  阅读并确认**云服务器 ECS 服务条款**。
+        关于公网带宽计费的详细规则，请参见[公网带宽计费](/intl.zh-CN/产品计费/计费项/公网带宽计费.md)。
 
-7.  根据实例付费模式确认创建实例。
+        |带宽计费模式|说明|
+        |------|--|
+        |**按固定带宽**|按您选择的带宽值计费，适用于对网络带宽有稳定要求的场景。|
+        |**按使用流量**|按实际使用的流量计费，此时选择的带宽峰值用于防止突然爆发的流量产生较高费用。适用于对网络带宽要求变化大的场景，例如大部分时间流量较低，但间歇性出现流量高峰。|
 
-    -   包年包月实例：单击**确认下单**。
-    -   按量付费实例：单击**创建实例**。
+    3.  选择按固定带宽的带宽值或按使用流量的带宽峰值。
 
-实例开通后，单击**管理控制台**回到ECS管理控制台查看新建的ECS实例。在相应地域的**实例列表**里，您能查看新建实例的实例名称、公网IP地址、内网IP地址或私网IP等信息。
+3.  选择安全组。
 
--   您可以通过FTP服务上传本地文件到ECS实例。关于部署FTP服务的详细操作，请参见[手动搭建FTP站点（Windows）](/intl.zh-CN/建站教程/搭建应用/搭建FTP站点/手动搭建FTP站点（Windows）.md)。
--   创建实例后，建议您对操作系统做安全合规性检查和加固：
-    -   Linux实例，请参见 *安全公告和技术* 手册中的[Linux操作系统加固](https://www.alibabacloud.com/help/doc-detail/49809.htm)。
-    -   Windows实例，请参见 *安全公告和技术* 手册中的[Windows操作系统安全加固](https://www.alibabacloud.com/help/doc-detail/49781.htm)。
--   如果您随实例创建了数据盘，只有分区格式化后您才能正常使用数据盘，具体操作，请参见[Windows格式化数据盘](/intl.zh-CN/块存储/云盘/分区格式化数据盘/Windows格式化数据盘.md)或[Linux格式化数据盘](/intl.zh-CN/块存储/云盘/分区格式化数据盘/Linux格式化数据盘.md)。
+    安全组是一种虚拟防火墙，用于控制安全组内实例的入流量和出流量。更多信息，请参见[安全组概述](/intl.zh-CN/安全/安全组/安全组概述.md)。
+
+    如果在创建实例不需要自定义安全组配置，您可以跳过本步骤，系统会自动创建默认安全组。默认安全组入方向放行22端口、3389端口及ICMP协议，在创建完成后您可以修改安全组配置。
+
+    1.  如果您需要创建一个新的安全组，单击**新建安全组**。
+
+        关于安全组各项配置的详细说明，请参见[创建安全组](/intl.zh-CN/安全/安全组/创建安全组.md)。
+
+    2.  单击**重新选择安全组**。
+
+    3.  在**请选择安全组**对话框，选择一个或多个安全组，然后单击**选择**。
+
+4.  配置弹性网卡。
+
+    弹性网卡分为主网卡和辅助网卡。主网卡不支持从实例解绑，只能随实例一起创建和释放。辅助网卡支持自由绑定至实例和从实例解绑，方便您在实例之间切换网络流量。如需随实例一起创建辅助网卡，请单击![add-nic](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0579352261/p278943.png)图标，然后选择辅助网卡所属的交换机。
+
+    **说明：** 创建实例时只能添加1块辅助网卡，您也可以在实例创建完成后单独创建辅助网卡并绑定至实例。关于各实例规格支持绑定的弹性网卡的数量，请参见[实例规格族](/intl.zh-CN/实例/实例规格族.md)。
+
+
+## （可选）步骤3：完成系统配置
+
+系统配置包括登录凭证、主机名、实例自定义数据等，用于定制实例在控制台和操作系统内显示的信息或使用方式。完成系统配置后，单击**下一步：分组设置**。
+
+1.  配置登录凭证。
+
+    登录凭证用于安全地登录实例，关于实例连接方式的介绍，请参见[连接方式概述](/intl.zh-CN/实例/连接实例/连接方式概述.md)。
+
+    |登录凭证|说明|
+    |----|--|
+    |**密钥对**|选择已有的密钥对，或者单击**创建密钥对**即时创建密钥对。创建完成后，返回ECS实例创建向导并单击![refresh](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0575702261/p278001.png)按钮，查看最新的密钥对列表。具体操作，请参见[创建SSH密钥对](/intl.zh-CN/安全/SSH密钥对/使用SSH密钥对/创建SSH密钥对.md)。**说明：** 仅Linux实例支持使用密钥对登录。 |
+    |**自定义密码**|输入并确认密码。使用用户名和密码登录实例时，Linux实例默认用户名为`root`，Windows实例默认用户名为`administrator`。|
+    |**创建后设置**|在实例创建完成后，自行绑定密钥对或者重置实例密码。具体操作，请参见[绑定SSH密钥对](/intl.zh-CN/安全/SSH密钥对/使用SSH密钥对/绑定SSH密钥对.md)和[重置实例登录密码](/intl.zh-CN/实例/管理实例/重置实例登录密码.md)。|
+
+2.  配置控制台中显示的实例名称和操作系统内部显示的主机名称。
+
+    创建多台实例时，设置有序的实例名称和主机名称便于从名称了解实例的批次等信息。关于设置有序名称的规则，请参见[批量设置有序的实例名称或主机名称](/intl.zh-CN/最佳实践/批量设置有序的实例名称或主机名称.md)。
+
+3.  配置高级选项。
+
+    1.  选择实例RAM角色。
+
+        实例通过实例RAM角色获得该角色拥有的权限，可以基于临时安全令牌STS（Security Token Service）访问指定云服务的API和操作指定的云资源，安全性更高。
+
+        选择已有的实例RAM角色，或者单击**创建实例RAM角色**前往RAM控制台即时创建实例RAM角色。创建完成后，返回ECS实例创建向导并单击![refresh](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0575702261/p278001.png)按钮，查看最新的实例RAM角色列表。具体操作，请参见[创建实例RAM角色并为角色授予权限](/intl.zh-CN/安全/实例RAM角色/授予实例RAM角色.md)。
+
+    2.  选择实例元数据访问模式。
+
+        实例元数据（metadata）包含了实例在阿里云系统中的信息，您可以在运行中的实例内方便地查看实例元数据，并基于实例元数据配置或管理实例。支持通过普通模式和加固模式查看实例元数据，具体操作，请参见[查看实例元数据](/intl.zh-CN/实例/管理实例/使用实例元数据/查看实例元数据.md)。
+
+    3.  配置实例自定义数据。
+
+        实例自定义数据可以作为实例自定义脚本在启动实例时执行，实现自动化配置实例，或者仅作为普通数据传入实例。更多信息，请参见[使用实例自定义数据（Linux实例）](/intl.zh-CN/实例/管理实例/使用实例自定义数据/使用实例自定义数据（Linux实例）.md)和[使用实例自定义数据（Windows实例）](/intl.zh-CN/实例/管理实例/使用实例自定义数据/使用实例自定义数据（Windows实例）.md)。
+
+        在输入框输入您准备的实例自定义数据。如果实例自定义数据已进行Base64编码，请选中**输入已采用Base64编码**。
+
+
+## （可选）步骤4：完成分组设置
+
+分组设置提供标签、资源组等批量管理实例的方式。完成分组设置后，单击**下一步：确认订单**。
+
+1.  配置标签。
+
+    标签由一对键值（Key-Value）组成。使用标签标识具有相同特征的资源后，例如所属组织或用途相同的资源，您可以基于标签方便地检索和管理资源。更多信息，请参见[标签概述](/intl.zh-CN/标签与资源/标签/标签概述.md)。
+
+    选择已有的标签，或者填写标签键和标签值即时创建标签。
+
+2.  选择资源组。
+
+    资源组供您从业务角度管理跨地域、跨产品的资源，并支持针对资源组管理权限。更多信息，请参见[资源组](/intl.zh-CN/标签与资源/资源/资源组.md)。
+
+    选择已有的资源组，或者单击**去创建**前往资源管理控制台即时创建资源组。创建完成后，返回ECS实例创建向导并单击![refresh](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0575702261/p278001.png)按钮，查看最新的资源组列表。具体操作，请参见[创建资源组]()。
+
+3.  选择部署集。
+
+    部署集支持高可用策略，部署集内实例会严格分散在不同的物理服务器上，保证业务的高可用性和底层容灾能力。
+
+    选择已有的部署集，或者单击**管理部署集**即时创建部署集。创建完成后，返回ECS实例创建向导并单击![refresh](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0575702261/p278001.png)按钮，查看最新的部署集列表。具体操作，请参见[创建部署集](/intl.zh-CN/部署与弹性/部署集/创建部署集.md)。
+
+4.  选择专有宿主机。
+
+    专有宿主机是一台由单租户独享物理资源的云主机，具有满足严格的安全合规要求、允许自带许可证（BYOL）上云等优势。
+
+    选择已有的专有宿主机，或者单击**创建专有宿主机**即时创建专有宿主机。创建完成后，返回ECS实例创建向导并单击![refresh](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0575702261/p278001.png)按钮，查看最新的专有宿主机列表。具体操作，请参见[创建DDH](/intl.zh-CN/快速入门/创建DDH.md)。
+
+5.  选择私有池。
+
+    创建弹性保障或容量预定后，系统会自动生成私有池，预留特定属性特定数量的实例。从关联的私有池中创建这一类实例，可以提供资源确定性保障。更多信息，请参见[资源保障概述](/intl.zh-CN/标签与资源/资源保障/资源保障概述.md)。
+
+    **说明：** 弹性保障和容量预定仅支持为按量付费实例保障资源供应确定性。
+
+    |私有池容量|说明|
+    |-----|--|
+    |**开放**|优先使用开放类型私有池的容量，如果开放类型私有池无可用容量，则尝试使用公共池的容量。|
+    |**不使用**|不使用任何私有池的容量。|
+    |**指定**|继续指定一个专用或开放类型私有池的ID，使用其容量创建实例。如果该私有池没有可用容量，则创建失败。|
+
+
+## 步骤5：确认订单
+
+在最终创建实例前，请检查实例的整体配置并配置使用时长等选项，确保各项配置符合您的要求。
+
+1.  检查所选配置。
+
+    如需修改配置，单击![edit](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0579352261/p279222.png)图标前往对应页面。您可以基于所选配置生成模板，方便后续快捷创建配置类似的实例，如下表所示。
+
+    |快捷操作|说明|相关文档|
+    |----|--|----|
+    |**保存为启动模板**|将所选配置保存为启动模板，使用启动模板创建实例可以免去重复配置的操作。|[使用实例启动模板创建实例](/intl.zh-CN/实例/创建实例/使用实例启动模板创建实例.md)|
+    |**生成Open API最佳实践脚本**|自动生成API工作流和SDK示例供您参考。|    -   [RunInstances](/intl.zh-CN/API参考/实例/RunInstances.md)
+    -   [批量创建ECS实例（Java）](/intl.zh-CN/SDK示例/Java示例/创建ECS实例/批量创建ECS实例.md)
+    -   [批量创建ECS实例（Python）](/intl.zh-CN/SDK示例/Python示例/批量创建ECS实例.md) |
+    |**保存当前购买配置为ROS模板**|将所选配置保存为ROS模板，方便继续使用ROS模板创建资源栈，实现一键交付资源。|[创建资源栈](/intl.zh-CN/资源栈/创建资源栈.md)|
+
+2.  配置实例的使用时长。
+
+    -   按量付费实例：设置自动释放实例的时间。您也可以在创建实例后手动释放实例，或者配置自动释放。具体操作，请参见[释放实例](/intl.zh-CN/实例/管理实例/释放实例.md)。
+    -   包年包月实例：选择购买时长以及是否启用自动续费。您也可以在创建实例后手动续费实例，或者配置自动续费。具体操作，请参见[续费概述](/intl.zh-CN/产品计费/续费实例/续费概述.md)。
+3.  阅读*云服务器ECS服务条款*和*通用服务条款*，如无疑问，选中**《云服务器ECS服务条款》\|《通用服务条款》**。
+
+4.  在页面底部查看实例的总费用，如无疑问，确认创建实例并按提示完成支付。
+
+
+实例创建完成后，前往实例列表页面查看实例的状态，当实例的状态为**运行中**时即可以接受访问。
+
+-   您可以连接实例进行格式化数据盘等操作，支持通过多种方式连接实例，包括Workbench、VNC和第三方客户端工具。使用VNC连接实例的具体操作，请参见[通过密码认证登录Linux实例](/intl.zh-CN/实例/连接实例/使用VNC连接实例/通过密码认证登录Linux实例.md)和[通过密码认证登录Windows实例](/intl.zh-CN/实例/连接实例/使用VNC连接实例/通过密码认证登录Windows实例.md)。
+-   如果您随实例一起创建了数据盘，必须分区格式化数据盘，然后才能正常使用数据盘。具体操作，请参见[Linux格式化数据盘](/intl.zh-CN/块存储/云盘/分区格式化数据盘/Linux格式化数据盘.md)和[Windows格式化数据盘](/intl.zh-CN/块存储/云盘/分区格式化数据盘/Windows格式化数据盘.md)。
+-   您可以通过FTP服务上传本地文件到实例。关于如何部署FTP服务，请参见[手动搭建FTP站点（CentOS 8）](/intl.zh-CN/建站教程/搭建应用/搭建FTP站点/手动搭建FTP站点（CentOS 8）.md)和[手动搭建FTP站点（Windows）](/intl.zh-CN/建站教程/搭建应用/搭建FTP站点/手动搭建FTP站点（Windows）.md)。
+-   创建实例后，建议您对操作系统进行安全合规性检查和加固。具体操作，请参见[Linux操作系统加固](https://www.alibabacloud.com/help/doc-detail/49809.htm)和[Windows操作系统安全加固](https://www.alibabacloud.com/help/doc-detail/49781.htm)。
 
